# python-game-playground

./: README.md  pyproject.toml
game_playground/: game.py
game_playground/logic/: game_state.py
game_playground/model/: fruit.py  snake.py
