[tool.poetry]
name = "game-playground"
version = "0.1.0"
description = ""
authors = ["Mohammed Abdulrazeg <github@mzawi.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
